<resources>
    <string name="app_name">MadCars</string>
    <string name="ajout_favoris">Ajouter aux favoris</string>
    <string name="categorie">Categorie</string>
    <string name="prix">Prix</string>
    <string name="nom">Nom</string>
    <string name="supprimer">Supprimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>